# auto-pongs

./: CMakeLists.txt  README.md
docs/scripts/: record.sh
src/: game.cpp  main.cpp  setup.cpp
src/include/: auto_pong.hpp
